--- a/adhocracy/kit_theme/static_src/stylesheets/widgets/_header.scss
+++ b/adhocracy/kit_theme/static_src/stylesheets/widgets/_header.scss
@@ -28,6 +28,7 @@ header {
             margin: 0;
         }
         li {
+            display: inline-block;
             position: relative;
             ul.children {display: none;}
             &:hover ul.children {
